--- a/TODO
+++ b/TODO
@@ -1,3 +1,3 @@
- - update versions in requirements.txt
- - keep/remove multi-server support?
+ - test removed versions in requirements.txt; add freeze to instructions if works
  - check pg_hba format
+
