--- a/TODO
+++ b/TODO
@@ -1,3 +1,4 @@
  - test removed versions in requirements.txt; add freeze to instructions if works
  - check pg_hba format
+ - remove database password, use local auth
 
