--- a/README
+++ b/README
@@ -40,6 +40,7 @@ It comes bundled with a default Django project that includes a few tweaks I usua
     d. Change the ADMINS setting (unless you want me getting your tracebacks)
  4. If you want to deploy from GitHub, generate a keypair using ssh-keygen and put it in the server directory
     (Otherwise, remove the lines referencing id_rsa from the fabfile.)
+ 5. Consider doing a `pip freeze` on your server and updating server/requirements.txt with version requirements.
 
 = If you're converting an existing Django project =
  1. Make things look like you did all the steps above.
