--- a/README
+++ b/README
@@ -14,18 +14,17 @@ It comes bundled with a default Django project that includes a few tweaks I usua
 
 = Non-features = 
 - Sites running across multiple servers (e.g., a separate database server, or multiple web servers). This is available in a branch, but you might not like it.
-- Compatibility with servers running sites or services other than this one. The Fabfile overwrites configuration files and in general might step on things.
+- Compatibility with servers running setups other than this one. The Fabfile overwrites configuration files and in general might step on things.
 - Accepting inbound email
 - Configuration tuned for high traffic. Set your own values in the `server` directory's various config files.
 - Running on servers other than Ubuntu 10.4
 
-= Non-configurable, but modifying the source shouldn't be too hard = 
+= Non-configurable, but modifying the source should be easy = 
 - Runs your site from www.yourdomain.com
 - Static files are served with URL prefix /static/
-- You're using Git and hosting at GitHub
+- Assumes you're using Git and hosting at GitHub
 
 = Caveats =
-- Written for Fabric <1.0, haven't fully updated it yet
 - I haven't tried running this from Windows
 
 === Installation & Usage ===
@@ -48,6 +47,7 @@ It comes bundled with a default Django project that includes a few tweaks I usua
     static url prefix, consider submitting a patch to make it a configuration setting.
 
 = Out of band project setup =
+- Server provisioning
 - DNS
 - SPF
 
