multi-site support

--- a/README
+++ b/README
@@ -35,8 +35,7 @@ It comes bundled with a default Django project that includes a few tweaks I usua
  3. In yourproject/settings.py:
     a. Change the PROJECT_NAME and DOMAIN at the top of settings.py to match fabfile.py
     b. Modify the SECRET_KEY='' line to use a random key (see comment there for help)
-    c. Set the same database password as in fabfile.py
-    d. Change the ADMINS setting (unless you want me getting your tracebacks)
+    c. Change the ADMINS setting (unless you want me getting your tracebacks)
  4. Generate a keypair using ssh-keygen and put it in the server directory.
     Upload the public key to GitHub as your project's "Deploy Key".
  5. Consider doing a `pip freeze` on your server and updating server/requirements.txt with version requirements.
